--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,17 +1,29 @@
-<footer class="landing-footer">
+<footer class="footer">
   <h2 class="sr-only">Contacts information</h2>
-  <div class="landing-footer__container container-base">
-    <div class="landing-footer__top">
-      <div class="landing-footer__body">
-        <img src="/public/images/footer-logo.svg" alt="Logo" class="landing-footer__logo" />
-        <div class="landing-footer__column">
+  <div class="footer__container container-base">
+    <div class="footer__top">
+      <div class="footer__body">
+        <img src="/public/images/logo.svg" alt="Logo" class="footer__logo" />
+        <div class="footer__column">
           <h3>Contact:</h3>
           <p>
             7616 Ogontz Ave <br />
-            Philadelphia, PA 19150
+            Philadelphia, PA 19150 <br />
+            <a href="tel:2678931250">(267) 893-1250</a>
           </p>
+          <div class="footer__socials">
+            <a href="#" title="Facebook" class="footer__socials-item">
+              <img src="/public/images/facebook.svg" alt="Facebook" />
+            </a>
+            <a href="#" title="Instagram" class="footer__socials-item">
+              <img src="/public/images/insta.svg" alt="Instagram" />
+            </a>
+            <a href="#" title="Linkedin" class="footer__socials-item">
+              <img src="/public/images/insta.svg" alt="Linkedin" />
+            </a>
+          </div>
         </div>
-        <div class="landing-footer__column">
+        <div class="footer__column">
           <h3>Schedule:</h3>
           <p>
             Sunday - Monday <br />
@@ -19,20 +31,9 @@
           </p>
         </div>
       </div>
-      <div class="landing-footer__socials">
-        <a href="#" title="Facebook" class="landing-footer__socials-item">
-          <img src="/public/images/facebook.svg" alt="Facebook" />
-        </a>
-        <a href="#" title="Instagram" class="landing-footer__socials-item">
-          <img src="/public/images/insta.svg" alt="Instagram" />
-        </a>
-        <a href="#" title="Linkedin" class="landing-footer__socials-item">
-          <img src="/public/images/insta.svg" alt="Linkedin" />
-        </a>
-      </div>
     </div>
-    <div class="landing-footer__bottom">
-      <div class="landing-footer__bottom-copyright">
+    <div class="footer__bottom">
+      <div class="footer__bottom-copyright">
         <p>
           © 2024. All Rights Reserved. Privacy Policy. Website by
           <a href="https://www.curisdigital.com/" target="_blank">Curis Digital</a>
