--- a/partials/header.html
+++ b/partials/header.html
@@ -1,13 +1,9 @@
 <header class="landing-header">
   <div class="landing-header__container container-base">
     <div class="landing-header__logo">
-      <img src="/public/images/header-logo.webp" width="284" height="120" alt="Logo" />
+      <img src="/public/images/logo.svg" width="284" height="120" alt="Logo" />
     </div>
-    <a
-      href="tel:2678931250"
-      title="Phone number"
-      aria-label="Phone number"
-      class="header__phone landing-button landing-button_white"
+    <a href="tel:2678931250" title="Phone number" aria-label="Phone number" class="header__phone button button_white"
       >267 893 1250</a
     >
   </div>
