--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -3,8 +3,9 @@
   --color-light-100: #f8f7fc;
   --color-accent: #65008f;
   --color-accent-opacity: #65008f40;
+  --color-accent-transparent: rgba(101, 0, 143, 0.97);
   --color-dark: #1b0126;
-  --font-family-base: "Balto", sans-serif;
+  --font-family-base: "AktivGrotesk", sans-serif;
   --font-family-accent: "TiemposHeadline", sans-serif;
   --font-family-italic: "TiemposText", sans-serif;
 }
