--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,7 +7,7 @@ html.is-lock {
 
 body {
   font-family: var(--font-family-base);
-  font-size: fluid(18, 24);
+  font-size: rem(24);
   color: var(--color-dark);
   background: rgb(237, 233, 255);
   background: linear-gradient(180deg, rgba(237, 233, 255, 1) 0%, rgba(248, 247, 252, 1) 33%);
@@ -19,32 +19,32 @@ img {
   object-fit: contain;
 }
 
+.landing h1 {
+  color: var(--color-dark);
+}
+
 h1, .h1, //
 h2, .h2,
 h3, .h3 {
   font-family: var(--font-family-accent);
   line-height: 1.2;
-  font-weight: 700;
-  i,
-  em {
-    font-family: var(--font-family-italic);
-  }
+  color: var(--color-accent);
 }
 
 h1,
 .h1 {
-  font-size: fluid(36, 72);
+  font-size: fluid(50, 80);
   letter-spacing: -0.03em;
 }
 
 h2,
 .h2 {
-  font-size: fluid(32, 64);
+  font-size: fluid(40, 64);
   text-align: center;
-  margin-bottom: fluid(20, 60);
+  margin-bottom: fluid(32, 50);
   display: flex;
   flex-direction: column;
-  row-gap: rem(25);
+  row-gap: rem(35);
 
   &::after {
     content: "";
@@ -61,6 +61,7 @@ h3,
 .h3 {
   color: var(--color-accent);
   font-size: rem(24);
+  font-weight: 700;
 }
 
 .wrapper {
@@ -82,7 +83,7 @@ h3,
 
 .button {
   letter-spacing: 1.4px;
-  padding: rem(16) rem(44);
+  padding: rem(14) rem(44);
   border-radius: 8px;
   background-color: var(--color-accent);
   color: var(--color-light);
