--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,490 +4,22 @@
 @use "global";
 @use "helpers" as *;
 
-.header-logo {
-  max-width: fluid(200, 284);
-}
+@use "./blocks/header.scss";
+@use "./blocks/footer.scss";
+@use "./blocks/landing-header.scss";
+@use "./blocks/cta.scss";
+@use "./blocks/testimonials.scss";
+@use "./blocks/landing-hero.scss";
+@use "./blocks/hero.scss";
+@use "./blocks/circle-button.scss";
+@use "./blocks/simple-cta.scss";
+@use "./blocks/benefits.scss";
+@use "./blocks/accordion.scss";
+@use "./blocks/modal.scss";
 
-/* Landing Header */
-.landing-header {
-  padding: fluid(20, 40) 0;
-  &__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    column-gap: rem(30);
-    @include x-small {
-      flex-direction: column;
-      align-items: center;
-      row-gap: rem(20);
-    }
-  }
+@import '/node_modules/aos/dist/aos.css';
 
-  &__phone {
-    flex-shrink: 0;
-  }
-}
-
-/* landing hero */
-.landing-hero {
-  padding-bottom: fluid(40, 80);
-
-  &__container {
-    position: relative;
-  }
-
-  &__banner {
-    margin-bottom: rem(30);
-    height: rem(400);
-    position: absolute;
-    left: 0;
-    top: 0;
-    padding-left: rem(20);
-    @include large {
-      padding-left: 0;
-      position: static;
-      height: auto;
-      margin-bottom: 0;
-    }
-    @include medium {
-      display: none;
-    }
-  }
-
-  &__body {
-    padding-top: fluid(30, 60);
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-    padding-right: rem(50);
-    column-gap: rem(30);
-    @include large {
-      flex-direction: column;
-      padding-right: 0;
-      row-gap: rem(40);
-      align-items: center;
-    }
-  }
-
-  &__content {
-    flex: 0 1 rem(1070);
-    text-align: center;
-    padding-left: fluid(20, 130);
-    @include large {
-      flex: 0 1 auto;
-      padding-left: 0;
-    }
-
-    p {
-      margin-top: rem(24);
-      font-size: fluid(20, 32);
-      line-height: 1.4;
-    }
-  }
-
-  &__form {
-    flex: 0 1 rem(576);
-    width: 100%;
-    background: rgba(255, 255, 255, 0.75);
-    backdrop-filter: blur(5px);
-    border: 1px solid var(--color-accent-opacity);
-    border-radius: rem(8);
-    @include large {
-      flex: 0 1 auto;
-    }
-  }
-
-  &__form-title {
-    padding: rem(30) rem(20) 0;
-    text-align: center;
-    font-size: fluid(24, 32);
-    margin-bottom: 0;
-    display: block;
-
-    &::after {
-      display: none;
-    }
-  }
-}
-
-/* CTA */
-.cta {
-  padding-top: fluid(30, 120);
-  padding-bottom: fluid(50, 100);
-
-  &__container {
-    display: flex;
-    column-gap: fluid(30, 90);
-    @include medium {
-      flex-direction: column;
-      row-gap: rem(30);
-    }
-  }
-
-  &__image {
-    img {
-      object-fit: cover;
-    }
-  }
-
-  &__content {
-  }
-}
-
-/* Testimonials */
-.testimonials {
-  padding: fluid(40, 120) 0;
-
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  &__items {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: rem(20) rem(80);
-    margin-bottom: fluid(30, 60);
-    @include x-large {
-      gap: rem(20);
-    }
-    @include small {
-      grid-template-columns: 1fr;
-    }
-  }
-}
-
-.testimonial {
-  flex: 0 1 rem(500);
-  min-width: rem(320);
-  background-color: var(--color-light);
-  border-top-left-radius: 40px;
-  border: 1px solid var(--color-accent-opacity);
-  padding: rem(24) fluid(20, 40);
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  min-height: rem(280);
-  @include medium {
-    min-height: unset;
-  }
-
-  &__rating {
-    width: auto;
-    height: rem(15);
-    object-fit: contain;
-    margin-bottom: rem(16);
-  }
-
-  &__text {
-    margin-bottom: rem(30);
-    font-size: fluid(18, 20);
-  }
-
-  &__author {
-    font-size: rem(16);
-    font-weight: 500;
-  }
-}
-
-/* Footer */
-.footer {
-  &__body {
-    display: flex;
-    justify-content: space-between;
-    gap: rem(50) rem(30);
-    position: relative;
-    padding-top: rem(37);
-    flex-wrap: wrap;
-
-    @include small {
-      flex-direction: column;
-      align-items: center;
-      gap: rem(20);
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: rem(1);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: contain;
-      background-image: url("data:image/svg+xml,%3Csvg%20width%3D%221801%22%20height%3D%221%22%20viewBox%3D%220%200%201801%201%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cline%20x1%3D%220.5%22%20y1%3D%220.5%22%20x2%3D%221800.5%22%20y2%3D%220.500157%22%20stroke%3D%22url(%23paint0_linear_310_1125)%22%2F%3E%3Cdefs%3E%3ClinearGradient%20id%3D%22paint0_linear_310_1125%22%20x1%3D%220.5%22%20y1%3D%221.5%22%20x2%3D%221800.5%22%20y2%3D%221.50016%22%20gradientUnits%3D%22userSpaceOnUse%22%3E%3Cstop%20stop-color%3D%22%23A9A9BC%22%20stop-opacity%3D%220%22%2F%3E%3Cstop%20offset%3D%220.5%22%20stop-color%3D%22%23A9A9BC%22%2F%3E%3Cstop%20offset%3D%221%22%20stop-color%3D%22%23A9A9BC%22%20stop-opacity%3D%220%22%2F%3E%3C%2FlinearGradient%3E%3C%2Fdefs%3E%3C%2Fsvg%3E");
-    }
-  }
-
-  &__logo {
-    max-width: fluid(230, 297);
-  }
-
-  &__menus {
-    flex: 0 1 630px;
-    display: flex;
-    gap: rem(50) rem(30);
-    flex-wrap: wrap;
-    justify-content: space-between;
-    @include small {
-      flex-direction: column;
-      align-items: center;
-      flex: 0 1 auto;
-      gap: rem(20);
-    }
-  }
-
-  &__column {
-    font-size: rem(20);
-    line-height: 1.5;
-    font-family: var(--font-family-base);
-
-    h3 {
-      margin-bottom: rem(8);
-      font-family: var(--font-family-base);
-    }
-
-    a {
-      @include hover {
-        text-decoration: underline;
-      }
-    }
-    @include small {
-      text-align: center;
-    }
-  }
-
-  &__socials {
-    padding-top: rem(16);
-    display: flex;
-    column-gap: rem(35);
-
-    @include small {
-      justify-content: center;
-    }
-
-    &-item {
-      flex-shrink: 0;
-      width: rem(32);
-      height: rem(32);
-      padding: rem(3);
-    }
-  }
-
-  &__bottom-copyright {
-    margin-top: rem(32);
-    position: relative;
-    padding: rem(32) 0 rem(30);
-    font-size: rem(16);
-    text-align: center;
-
-    &::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: rem(1);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: contain;
-      background-image: url("data:image/svg+xml,%3Csvg%20width%3D%221801%22%20height%3D%221%22%20viewBox%3D%220%200%201801%201%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cline%20x1%3D%220.5%22%20y1%3D%220.5%22%20x2%3D%221800.5%22%20y2%3D%220.500157%22%20stroke%3D%22url(%23paint0_linear_310_1125)%22%2F%3E%3Cdefs%3E%3ClinearGradient%20id%3D%22paint0_linear_310_1125%22%20x1%3D%220.5%22%20y1%3D%221.5%22%20x2%3D%221800.5%22%20y2%3D%221.50016%22%20gradientUnits%3D%22userSpaceOnUse%22%3E%3Cstop%20stop-color%3D%22%23A9A9BC%22%20stop-opacity%3D%220%22%2F%3E%3Cstop%20offset%3D%220.5%22%20stop-color%3D%22%23A9A9BC%22%2F%3E%3Cstop%20offset%3D%221%22%20stop-color%3D%22%23A9A9BC%22%20stop-opacity%3D%220%22%2F%3E%3C%2FlinearGradient%3E%3C%2Fdefs%3E%3C%2Fsvg%3E");
-    }
-
-    a {
-      @include hover {
-        text-decoration: underline;
-      }
-    }
-  }
-}
-
-/* Header main */
-.header {
-  padding: fluid(24, 40) 0;
-  &__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    column-gap: rem(30);
-    padding: 0 rem(24);
-  }
-  &__overlay {
-    @include medium {
-      transition: transform 0.3s ease;
-      position: fixed;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      background-color: var(--color-accent-transparent);
-      z-index: 40;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      &:not(.is-active) {
-        transform: translateX(100%);
-      }
-    }
-  }
-  &__overlay-inner {
-    @include medium {
-      overflow: auto;
-      padding: rem(32);
-    }
-  }
-  &__mobile-buttons {
-    display: flex;
-    flex-direction: column;
-    row-gap: rem(16);
-    width: 100%;
-    max-width: rem(400);
-    margin: rem(30) auto 0 auto;
-    @include above-medium {
-      display: none;
-    }
-  }
-  &__mobile-button {
-    border: 2px solid var(--color-light);
-    width: 100%;
-    font-size: rem(18);
-  }
-  &__mobile-location {
-    font-size: rem(20);
-    margin-bottom: rem(24);
-    color: var(--color-light);
-    text-align: center;
-    line-height: 1.5;
-    margin-top: rem(94);
-  }
-  &__mobile-socials {
-    display: flex;
-    justify-content: space-evenly;
-  }
-  &__mobile-socials-link {
-    img {
-      width: rem(30);
-      height: rem(30);
-    }
-  }
-  &__menu-list {
-    display: flex;
-    column-gap: fluid(20, 60);
-    @include medium {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-  }
-  &__menu-item {
-    position: relative;
-    &.current-menu-item {
-      text-decoration: underline;
-      text-underline-offset: rem(6);
-      pointer-events: none;
-      @include medium {
-        text-decoration: none;
-      }
-    }
-    &.menu-item-has-children {
-      display: flex;
-      align-items: center;
-      column-gap: rem(8);
-      &::after {
-        margin-top: 5px;
-        content: "";
-        background-image: url("data:image/svg+xml,%3Csvg%20width%3D%228%22%20height%3D%226%22%20viewBox%3D%220%200%208%206%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M7.25%201.25L4%204.75L0.75%201.25%22%20stroke%3D%22%231B0126%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
-        width: rem(9);
-        height: rem(9);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-      }
-    }
-
-    @include hover {
-      .header__menu-sublist {
-        @include show;
-      }
-    }
-  }
-  &__menu-link {
-    transition: opacity 0.3s ease;
-    line-height: 1.2;
-    @include medium {
-      color: #fff;
-      font-size: rem(60);
-      font-family: var(--font-family-accent);
-    }
-    @include hover {
-      opacity: 0.6;
-    }
-  }
-  &__menu-sublist {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    padding: rem(8) rem(20);
-    background-color: var(--color-light);
-    z-index: 10;
-    width: max-content;
-    transition: all 0.3s ease;
-    @include hide;
-  }
-  &__menu-subitem {
-    padding: 2px 0;
-  }
-  &__menu-sublink {
-    transition: opacity 0.3s ease;
-    @include hover {
-      opacity: 0.6;
-    }
-  }
-  &__phone {
-    flex-shrink: 0;
-    @include medium {
-      display: none;
-    }
-  }
-}
-
-.burger-button {
-  transition: background-color 0.3s ease;
-  width: rem(50);
-  height: rem(50);
-  @include flex-center;
-  background-color: #fff;
-  position: relative;
-  border-radius: 50%;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  flex-shrink: 0;
-  display: none;
-  position: relative;
-  z-index: 50;
-  border: 1px solid var(--color-light);
-  @include medium {
-    display: flex;
-  }
-
-  &::after {
-    content: "";
-    background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2226%22%20height%3D%2219%22%20viewBox%3D%220%200%2026%2019%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M1%201.375H25M1%2017.375H25M1%209.375H25%22%20stroke%3D%22%2365008F%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
-    width: 24px;
-    height: 16px;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-
-  &.is-active {
-    background-color: transparent;
-    &::after {
-      background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2218%22%20height%3D%2218%22%20viewBox%3D%220%200%2018%2018%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M17%201L1%2017M1%201L17%2017%22%20stroke%3D%22white%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
-    }
-  }
-}
+@import "/node_modules/swiper/swiper.scss";
+@import "/node_modules/swiper/modules/navigation/navigation.scss";
+@import "/node_modules/swiper/modules/pagination/pagination.scss";
+@import "/node_modules/swiper/modules/a11y/a11y.scss";
