Sample section + menu sub items logic update

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @use "./blocks/benefits.scss";
 @use "./blocks/accordion.scss";
 @use "./blocks/modal.scss";
+@use "./blocks/sample.scss";
 
 @import '/node_modules/aos/dist/aos.css';
 
