Update landing page header, add new hero SVG, and enhance styles for services slider and CTA

--- a/partials/header-absolute.html
+++ b/partials/header-absolute.html
@@ -1,7 +1,7 @@
 <header class="header header_absolute" data-js-header>
   <div class="header__container container-base">
     <div class="header__logo header-logo">
-      <img src="/public/images/logo.svg" width="284" height="120" alt="Logo" />
+      <img src="/public/images/logo-white.svg" width="284" height="120" alt="Logo" />
     </div>
     <div class="header__overlay" data-js-header-overlay>
       <div class="header__overlay-inner">
