--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -7,6 +7,7 @@
   --color-dark-overlay: rgba(16, 11, 18, 0.5);
   --color-light-overlay: rgba(255, 255, 255, 0.75);
   --color-dark: #1b0126;
+  --color-green: #7FC234;
   --font-family-base: "aktiv-grotesk", sans-serif;
   --font-family-accent: "adobe-caslon-pro", serif;
 }
