--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -42,6 +42,26 @@
 
 .header {
   padding: fluid(24, 40) 0;
+  &_absolute {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    .header__menu-link {
+      color: var(--color-light);
+    }
+    .header__menu-item.menu-item-has-children > a::after {
+      background-image: url("data:image/svg+xml,%3Csvg%20width%3D%229%22%20height%3D%226%22%20viewBox%3D%220%200%209%206%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M7.75%201.25L4.5%204.75L1.25%201.25%22%20stroke%3D%22white%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
+    }
+    .header__menu-item.current-menu-item {
+      text-decoration-color: var(--color-green);
+    }
+    .header__phone {
+      @include hover {
+        background-color: var(--color-green);
+      }
+    }
+  }
   &__container {
     display: flex;
     justify-content: space-between;
@@ -150,28 +170,26 @@
         text-decoration: none;
       }
     }
-    &.menu-item-has-children {
-      & > a {
-        display: flex;
-        align-items: center;
-        column-gap: rem(8);
-        &::after {
-          transition: transform 0.3s ease;
-          margin-top: rem(3);
-          content: "";
-          background-image: url("data:image/svg+xml,%3Csvg%20width%3D%228%22%20height%3D%226%22%20viewBox%3D%220%200%208%206%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M7.25%201.25L4%204.75L0.75%201.25%22%20stroke%3D%22%231B0126%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
-          width: rem(9);
-          height: rem(9);
-          background-position: center;
-          background-repeat: no-repeat;
-          background-size: contain;
-        }
-        &.is-active::after {
-          transform: rotate(-180deg);
-        }
-        &.is-active + .header__menu-sublist {
-          @include show;
-        }
+    &.menu-item-has-children > a {
+      display: flex;
+      align-items: center;
+      column-gap: rem(8);
+      &::after {
+        transition: transform 0.3s ease;
+        margin-top: rem(3);
+        content: "";
+        background-image: url("data:image/svg+xml,%3Csvg%20width%3D%228%22%20height%3D%226%22%20viewBox%3D%220%200%208%206%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M7.25%201.25L4%204.75L0.75%201.25%22%20stroke%3D%22%231B0126%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
+        width: rem(9);
+        height: rem(9);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: contain;
+      }
+      &.is-active::after {
+        transform: rotate(-180deg);
+      }
+      &.is-active + .header__menu-sublist {
+        @include show;
       }
     }
   }
