--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -105,9 +105,10 @@ h3,
   &_white {
     background-color: var(--color-light);
     color: var(--color-accent);
+    border: rem(2) solid var(--color-green);
     @include hover {
       color: var(--color-light);
-      background-color: var(--color-accent);
+      background-color: var(--color-green);
     }
   }
 }
@@ -130,4 +131,49 @@ h3,
       }
     }
   }
+}
+
+.slider-navigation {
+  margin-top: rem(16);
+  display: flex;
+  column-gap: rem(10);
+  align-items: center;
+  justify-content: space-between;
+}
+
+.slider-navigation-prev {
+  transform: rotate(180deg);
+  & .circle-button {
+    background-color: var(--color-accent);
+    background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2219%22%20height%3D%2211%22%20viewBox%3D%220%200%2019%2011%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M1.35156%201.46216L9.50031%209.57407L17.6491%201.46216%22%20stroke%3D%22white%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
+  }
+}
+
+.slider-navigation-next {
+  & .circle-button {
+    background-color: var(--color-accent);
+    background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2219%22%20height%3D%2211%22%20viewBox%3D%220%200%2019%2011%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M1.35156%201.46216L9.50031%209.57407L17.6491%201.46216%22%20stroke%3D%22white%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
+  }
+}
+
+.swiper-button-disabled .circle-button {
+  background-color: var(--color-light);
+  background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2219%22%20height%3D%2211%22%20viewBox%3D%220%200%2019%2011%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M1.35156%201.46216L9.50031%209.57407L17.6491%201.46216%22%20stroke%3D%22%2365008f%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
+}
+.swiper-pagination-bullet {
+  flex-shrink: 0;
+  background-color: var(--color-light) !important;
+  border: 1px solid var(--color-accent) !important;
+  width: rem(12) !important;
+  height: rem(12) !important;
+  opacity: 1 !important;
+  transition: all 0.3s ease;
+  &.swiper-pagination-bullet-active {
+    background-color: var(--color-accent) !important;
+    width: rem(24) !important;
+    border-radius: 50px;
+  }
+}
+.swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
+  transform: translate(0, 0) !important;
 }
