--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,5 +18,6 @@
 @use "./blocks/modal.scss";
 @use "./blocks/sample.scss";
 @use "./blocks/services-slider.scss";
+@use "./blocks/services.scss";
 
 @import '/node_modules/aos/dist/aos.css';
