--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -53,7 +53,7 @@ h2,
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    background-image: url("data:image/svg+xml,%3Csvg%20width%3D%22782%22%20height%3D%221%22%20viewBox%3D%220%200%20782%201%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cline%20x1%3D%220.5%22%20y1%3D%220.5%22%20x2%3D%22781.5%22%20y2%3D%220.500068%22%20stroke%3D%22url(%23paint0_linear_267_5350)%22%2F%3E%3Cdefs%3E%3ClinearGradient%20id%3D%22paint0_linear_267_5350%22%20x1%3D%220.5%22%20y1%3D%221.5%22%20x2%3D%22781.5%22%20y2%3D%221.50007%22%20gradientUnits%3D%22userSpaceOnUse%22%3E%3Cstop%20stop-color%3D%22%23A9A9BC%22%20stop-opacity%3D%220%22%2F%3E%3Cstop%20offset%3D%220.5%22%20stop-color%3D%22%23A9A9BC%22%2F%3E%3Cstop%20offset%3D%221%22%20stop-color%3D%22%23A9A9BC%22%20stop-opacity%3D%220%22%2F%3E%3C%2FlinearGradient%3E%3C%2Fdefs%3E%3C%2Fsvg%3E");
+    background-image: url('data:image/svg+xml,%3Csvg%20width%3D%22996%22%20height%3D%221%22%20viewBox%3D%220%200%20996%201%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cline%20x1%3D%220.5%22%20y1%3D%220.5%22%20x2%3D%22995.5%22%20y2%3D%220.500087%22%20stroke%3D%22url(%23paint0_linear_3014_2907)%22%2F%3E%3Cdefs%3E%3ClinearGradient%20id%3D%22paint0_linear_3014_2907%22%20x1%3D%220.5%22%20y1%3D%221.5%22%20x2%3D%22995.5%22%20y2%3D%221.50009%22%20gradientUnits%3D%22userSpaceOnUse%22%3E%3Cstop%20stop-color%3D%22%2379D402%22%20stop-opacity%3D%220%22%2F%3E%3Cstop%20offset%3D%220.5%22%20stop-color%3D%22%2379D402%22%2F%3E%3Cstop%20offset%3D%221%22%20stop-color%3D%22%2379D402%22%20stop-opacity%3D%220%22%2F%3E%3C%2FlinearGradient%3E%3C%2Fdefs%3E%3C%2Fsvg%3E');
   }
 }
 
