Add contacts page with address and contact form, update hero section styles and header button color

--- a/partials/header-absolute.html
+++ b/partials/header-absolute.html
@@ -61,7 +61,7 @@
             </ul>
           </nav>
           <div class="header__mobile-buttons">
-            <a href="#" class="button button_white header__mobile-button">GET CARE</a>
+            <a href="#" class="button button_green header__mobile-button">GET CARE</a>
             <a href="#" class="button header__mobile-button">CALL US</a>
           </div>
           <p class="header__mobile-location">7616 Ogontz Ave Philadelphia, PA 19150</p>
