--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,5 +19,6 @@
 @use "./blocks/sample.scss";
 @use "./blocks/services-slider.scss";
 @use "./blocks/services.scss";
+@use "./blocks/contacts.scss";
 
 @import '/node_modules/aos/dist/aos.css';
