Add 404 and Terms & Conditions pages, update styles for services and modal components, and enhance header structure

--- a/partials/header.html
+++ b/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header header_absolute" data-js-header>
+<header class="header" data-js-header>
   <div class="header__container container-base">
     <div class="header__logo header-logo">
       <img src="/public/images/logo.svg" width="284" height="120" alt="Logo" />
