--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,23 +2,25 @@
 @use "fonts";
 @use "utils";
 @use "global";
+@use "typography";
 @use "helpers" as *;
 
-@use "./blocks/header.scss";
-@use "./blocks/footer.scss";
-@use "./blocks/landing-header.scss";
-@use "./blocks/cta.scss";
-@use "./blocks/testimonials.scss";
-@use "./blocks/landing-hero.scss";
-@use "./blocks/hero.scss";
-@use "./blocks/circle-button.scss";
-@use "./blocks/simple-cta.scss";
-@use "./blocks/benefits.scss";
-@use "./blocks/accordion.scss";
-@use "./blocks/modal.scss";
-@use "./blocks/sample.scss";
-@use "./blocks/services-slider.scss";
-@use "./blocks/services.scss";
-@use "./blocks/contacts.scss";
+@use "./blocks/header";
+@use "./blocks/footer";
+@use "./blocks/landing-header";
+@use "./blocks/cta";
+@use "./blocks/testimonials";
+@use "./blocks/landing-hero";
+@use "./blocks/hero";
+@use "./blocks/circle-button";
+@use "./blocks/simple-cta";
+@use "./blocks/benefits";
+@use "./blocks/accordion";
+@use "./blocks/modal";
+@use "./blocks/sample";
+@use "./blocks/services-slider";
+@use "./blocks/services";
+@use "./blocks/contacts";
+@use "./blocks/not-found";
 
-@import '/node_modules/aos/dist/aos.css';
+@import "/node_modules/aos/dist/aos.css";
