--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,15 +1,15 @@
 .prose {
-  --prose-body: #909090;
-  --prose-headings: #909090;
-  --prose-lead: #4b5563;
+  --prose-body: #111827;
+  --prose-headings: #111827;
+  --prose-lead: #111827;
   --prose-links: #111827;
   --prose-bold: #111827;
-  --prose-counters: #6b7280;
-  --prose-bullets: #d1d5db;
-  --prose-hr: #e5e7eb;
+  --prose-counters: #111827;
+  --prose-bullets: #111827;
+  --prose-hr: #111827;
   --prose-quotes: #111827;
-  --prose-quote-borders: #e5e7eb;
-  --prose-captions: #6b7280;
+  --prose-quote-borders: #111827;
+  --prose-captions: #111827;
   --prose-kbd: #111827;
   --prose-kbd-shadows: 17 24 39;
   --prose-code: #111827;
@@ -22,19 +22,19 @@
   --prose-invert-lead: #9ca3af;
   --prose-invert-links: #fff;
   --prose-invert-bold: #fff;
-  --prose-invert-counters: #9ca3af;
-  --prose-invert-bullets: #4b5563;
-  --prose-invert-hr: #374151;
+  --prose-invert-counters: #111827;
+  --prose-invert-bullets: #111827;
+  --prose-invert-hr: #111827;
   --prose-invert-quotes: #f3f4f6;
-  --prose-invert-quote-borders: #374151;
-  --prose-invert-captions: #9ca3af;
+  --prose-invert-quote-borders: #111827;
+  --prose-invert-captions: #111827;
   --prose-invert-kbd: #fff;
   --prose-invert-kbd-shadows: 255 255 255;
   --prose-invert-code: #fff;
-  --prose-invert-pre-code: #d1d5db;
+  --prose-invert-pre-code: #111827;
   --prose-invert-pre-bg: rgb(0 0 0 / 50%);
-  --prose-invert-th-borders: #4b5563;
-  --prose-invert-td-borders: #374151;
+  --prose-invert-th-borders: #111827;
+  --prose-invert-td-borders: #111827;
   font-size: 1.125rem;
   line-height: 1.75;
   @media (max-width: 575.98px) {
