--- a/src/styles/blocks/sample.scss
+++ b/src/styles/blocks/sample.scss
@@ -2,6 +2,11 @@
 @use "../helpers" as *;
 
 .sample-section {
-  padding: fluid(50, 100) 0;
-  text-align: center;
+  padding: fluid(40, 70) 0;
+  h1, h2, h3, h4, h5, h6 {
+    text-align: left;
+    &::after {
+   display: none; 
+    }
+  }
 }
