Add smooth scroll functionality and "Back to Top" button, update styles for new components

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,5 +22,6 @@
 @use "./blocks/services";
 @use "./blocks/contacts";
 @use "./blocks/not-found";
+@use "./blocks/to-top-button";
 
 @import "/node_modules/aos/dist/aos.css";
