--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,10 @@ html.is-lock {
   overflow: hidden;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: var(--font-family-base);
   font-size: rem(24);
